--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Farcaster frame config -->
     <meta
       name="fc:frame"
-      content='{"version":"next","imageUrl":"https://res.cloudinary.com/drcwv987u/image/upload/v1748696534/sv_frame_image_r5lft7.png","button":{"title":"🚩 Start","action":{"type":"launch_frame","name":"Silicon Valley Quiz!","splashImageUrl":"https://res.cloudinary.com/drcwv987u/image/upload/v1748696525/sv_frame_splash_oookyt.jpg","splashBackgroundColor":"#0D1117"}}}'
+      content='{"version":"next","imageUrl":"https://res.cloudinary.com/drcwv987u/image/upload/v1748737183/What_Silicon_Valley_Character_are_you_otj2hj.png","button":{"title":"🚩 Check","action":{"type":"launch_frame","name":"Silicon Valley Quiz!","splashImageUrl":"https://res.cloudinary.com/drcwv987u/image/upload/v1748696525/sv_frame_splash_oookyt.jpg","splashBackgroundColor":"#0D1117"}}}'
     />
   </head>
   <body>
